# py-stock-management

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  BUSINESS_RULES_README.md  CLI_EXAMPLES.md  CREDENCIALES_DEMO.md  DOCKER_QUICKSTART.md  Dockerfile  GUARDIAS_PAGINA_README.md  MIGRATION_ACTIONS_V4.md  MIGRATION_CLI.md  MIGRATION_POSTGRESQL.md  README.md  USERS_PERMISSIONS_README.md  VALIDATIONS.md  check_users_in_db.py  create_admin_user.py  create_working_database.py  debug_database.py  debug_login.py  demo_business_rules.py  docker-compose.dev.yml  docker-compose.yml  docker-scripts.ps1  docker-scripts.sh  env.example  fix_flask_database.py  init_db.py  install_pre_commit.py  load_sample_data.py  migrate_to_cli.py  personalize_badges.py  pyproject.toml  pytest.ini  requirements.txt  run.py  seed_data.py  setup.py  sonar-project.properties  (+2 more)
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  dependabot.yml  release.yml  sonarcloud.yml
app/: __init__.py  api.py  config.py  init_categories.py
app/api/: __init__.py  auth.py  categories.py  orders.py  products.py  purchases.py  stock.py  users.py
app/core/: __init__.py  permissions.py
app/decorators/: __init__.py  cors_decorators.py  role_decorators.py
app/middleware/: auth_middleware.py  cors_middleware.py
app/models/: __init__.py  category.py  order.py  order_item.py  product.py  purchase_order.py  stock.py  user.py
app/routes/: __init__.py  auth.py  categories.py  frontend.py  orders.py  products.py  purchases.py  stock.py  users.py
app/schemas/: __init__.py  auth.py  category.py  order.py  product.py  purchase_order.py  stock.py  user.py
app/validators/: __init__.py  business_rules.py  order_validators.py  purchase_order_validators.py  stock_validators.py
backup_old_scripts/: add_custom_products.py
deployment/: Procfile
docker/: Dockerfile  docker-compose.yml  start-docker.sh
docs/: API_DOCUMENTATION.md  AUTH_SYSTEM_README.md  CATEGORIES_PERMISSIONS_README.md  CI_CD_GUIDE.md  CORS_CONFIGURATION_README.md  CREDENCIALES_DEMO.md  DARK_MODE_AND_MOBILE_MENU_README.md  DEPLOY_CLOUD.md  DEPLOY_GITHUB.md  FIX_SESION_EXPIRADA_README.md  FIX_SESION_INVALIDA_README.md  FIX_TOKEN_INVALIDO_README.md  FRONTEND_JWT_README.md  MANEJO_ERRORES_JSON_README.md  ONBOARDING_GUIDE.md  PURCHASES_PERMISSIONS_README.md  README_CLI.md  README_DOCKER.md  SETUP_CI_CD.md  SOLUCION_AUTENTICACION_FINAL.md  SOLUCION_CREDENCIALES_README.md  TOAST_SYSTEM.md
scripts/: check_app_status.py  check_db.py  create_admin_user.py  create_complete_database.py  create_demo_users.py  create_env.py  create_test_users.py  debug_jwt_token.py  demo_toast_system.py  demo_validations.py  fix_database.py  fix_roles_database.py  init_db_simple.py  init_sample_data.py  manage.py  manage_simple.py  run_validations.py  setup_complete.py  setup_cors.py  setup_env.py  start.bat  start.sh  start_backend.py  validate_auth_system.py  verify_data.py
static/css/: components.css  design-tokens.css  responsive.css  session-banners.css  style.css
static/js/: accessibility.js  alpine-helpers.js  app.js  auth-manager.js  auth.js  cache-manager.js  config.js  css-optimizer.js  feedback.js  form-ux.js  http-helper.js  jwt-validator.js  lazy-loader.js  mobile-menu.js  page-examples.js  page-utils.js  performance.js  responsive-tables.js  session-manager.js  sw.js  table-manager.js  theme.js  unified-auth.js
templates/: categories.html  change_password.html  dashboard.html  index.html  login.html  orders.html  products.html  profile.html  purchases.html  stock.html  users.html
tests/: __init__.py  conftest.py
